[project]
name = "pyle38"
version = "0.16.0"
description = "python client for Tile38"
authors = [{ name = "Benjamin Ramser", email = "iwpnd@posteo.de" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
keywords = ["tile38", "async", "client"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
  "pydantic>=2.10.5",
  "redis>=5.2.1",
]

[dependency-groups]
dev = [
  "types-redis>=4.6.0.20241004",
  "pytest>=7.2.0",
  "pre-commit>=2.20.0",
  "tox-uv>=1.11.3",
  "deptry>=0.22.0",
  "mypy>=0.991",
  "pytest-cov>=4.0.0",
  "ruff>=0.9.2",
  "gitlint>=0.19.1",
  "python-semantic-release>=9.21.0",
  "pytest-asyncio>=1.1.0",
]

[project.urls]
Homepage = "https://iwpnd.github.io/pyle38"
Repository = "https://github.com/iwpnd/pyle38"
Documentation = "https://iwpnd.github.io/pyle38"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.deptry]
ignore = ["DEP003", "DEP004"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["src", "tests"]
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = false
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # mutable datastructes as defaults
    "B006",
    # specific rule codes when ignoring type issues
    "PGH003",
]
fixable = ["ALL"]

[tool.basedpyright]
reportUnknownParameterType = false
reportCallInDefaultInitializer = false
typeCheckingMode = "standard"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["F401", "F403"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.semantic_release]
version_variables = [
    "src/pyle38/__init__.py:__version__",
    "pyproject.toml:version"
]
commit_message = "release: 🚀 v{version}"
branch = "main"
upload_to_release = true
build_command = "pip install uv && uv build"
allow_zero_version = true

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
    "release",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "docs", "refactor"]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "chore\\(release\\):",
  "chore\\(deps-dev\\):",
  "build\\(deps-dev\\):",
  "build\\(deps\\):",
  "ci:",
]
